<resources>
    <string name="app_name">UserInterface</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_services">Services</string>
    <string name="action_logout">Logout</string>
    <string name="disarmed_text">Disarm</string>
    <string name="connected_text">Connected</string>
    <string name="login_asking">Please Login</string>
    <string name="host_address_hint">Host Address</string>
    <string name="panel_id_hint">Panel ID</string>
    <string name="terms_of_use_text">Terms of use</string>
    <string name="next_button_text">Next</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="alarms_tab_text">Alarms</string>
    <string name="cameras_tab_text">Cameras</string>
    <string name="devices_tab_text">Devices</string>
    <string name="events_tab_text">Events</string>
    <string name="more_tab_text">More</string>
    <string name="user_code_hint">User code</string>
    <string name="login_button">Login</string>
    <string name="title_activity_user_code">UserCodeActivity</string>
</resources>
