<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    tools:context="com.example.dmitriy.userinterface.LoginScreenActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/nav_bar_background"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="35dp">
        <ImageButton
            android:paddingLeft="25dp"
            android:paddingRight="10dp"
            android:background="@null"
            android:src="@drawable/menu"
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:layout_weight="1"/>
        <ImageView
            android:src="@drawable/logo"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp">
            <TextView
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:id="@+id/login_text"
                android:text="@string/login_asking"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <TableRow android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_gravity="center"
                android:background="@drawable/host_address_field"
                android:minWidth="200dp"
                android:id="@+id/host_address"
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:hint="@string/host_address_hint"
                android:inputType="number|textUri"
                android:layout_weight="1"
                android:lines="1"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:enabled="false"
                android:editable="true" />
        </TableRow>
        <TableRow android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_gravity="center"
                android:background="@drawable/host_address_field"
                android:minWidth="200dp"
                android:id="@+id/panel_id"
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:hint="@string/panel_id_hint"
                android:inputType="text"
                android:layout_weight="1"
                android:lines="1"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:editable="true" />
        </TableRow>
        <TableRow android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                android:layout_height="match_parent" >
                    <CheckBox
                        android:id="@+id/terms_of_use_check"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:enabled="false"
                        android:checked="true"
                        android:clickable="true" />
                    <TextView
                        android:id="@+id/terms_of_use_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:textColor="#ffffff"
                        android:textSize="21dp"
                        android:text="@string/terms_of_use_text"
                        android:layout_weight="1"
                        android:clickable="true" />
            </LinearLayout>
        </TableRow>
        <TableRow android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:background="@drawable/next_button_selector"
                android:text="@string/next_button_text"
                android:textColor="#ffffff"
                android:textSize="21dp"
                android:id="@+id/next_button"
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:clickable="true" />
        </TableRow>
    </TableLayout>
</LinearLayout>