<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:id="@+id/login_code_layout_id"
    tools:context="com.example.dmitriy.userinterface.LoginScreenActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/nav_bar_background"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="35dp">
        <ImageButton
            android:paddingLeft="25dp"
            android:paddingRight="10dp"
            android:background="@null"
            android:src="@drawable/menu"
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:layout_weight="1"/>
        <ImageView
            android:src="@drawable/logo"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp">
            <TextView
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:id="@+id/login_text"
                android:text="@string/login_asking"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                />
        </TableRow>
        <TableRow android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_gravity="center"
                android:background="@drawable/host_address_field"
                android:minWidth="200dp"
                android:id="@+id/user_code_textview"
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:hint="@string/user_code_hint"
                android:inputType="numberPassword"
                android:layout_weight="1"
                android:lines="1"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:enabled="false"
                android:editable="true"
                android:focusable="true"
                android:maxLength="10" />
        </TableRow>
    </TableLayout>
    <GridLayout
        android:id="@+id/button_grid"
        android:paddingTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="4"
        android:rowOrderPreserved="true"
        android:columnOrderPreserved="true"
        android:alignmentMode="alignBounds">

        <Button
            android:id="@+id/digit1_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit1"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit2_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit2"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit3_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit3"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit4_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit4"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit5_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit5"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit6_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit6"
            android:clickable="true"
            android:enabled="true" />


        <Button
            android:id="@+id/digit7_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit7"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit8_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit8"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit9_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit9"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/login"
            android:text="@string/login_button"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/digit0_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/digit0"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:id="@+id/backspace_button"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/backspace"
            android:clickable="true"
            android:enabled="true" />

    </GridLayout>
</LinearLayout>